--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
   :root {
     --app-blue: #38b6ff;
 
-    --mission-blue: #eaf8ff;
+    --app-light-blue: #ebf8ff;
 
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
